# baye

./: .gitignore  2025-11-09-analise-e-faz-o-repo-homefrankworkspacebaye-se.txt  ARCHITECTURE.md  CHANGELOG.md  CHAT_CLI_PROPOSAL.md  CHAT_CLI_README.md  CLAIM_VALIDATION_PROPOSAL.md  FACTS_PROPOSAL.md  FINAL_SUMMARY.md  FINAL_SUMMARY_EN.md  GRANULAR_CLAIMS_SUMMARY.md  LLM_TOOL_CONTRACT.md  NL_INTEGRATION_ANALYSIS.md  PR1_ANALYSIS.md  PR1_CHANGES_ANALYSIS.md  QUICKSTART.md  README.md  README_EN.md  RELEASE_NOTES_v2.0.md  SCIENTIFIC_REVIEW.md  SCIENTIFIC_REVIEW_01.md  SCIENTIFIC_REVIEW_02.md  SCIENTIFIC_REVIEW_CONSOLIDATED.md  SYSTEM_ARCHITECTURE.md  WHITEPAPER.md  WHITEPAPER_NL_ENHANCEMENT.md  belief_estimation.py  example_estimation_integrated.py  example_llm_integration.py  justification_graph.py  llm_agents.py  pyproject.toml  run.sh  stress_test_output.txt  test_acknowledgment_verbose.py  test_chunking.py  test_chunking_direct.py  test_claim_flow.py  test_date_question.py  test_epistemic_humility.py  (+11 more)
.baye_data/: chroma.sqlite3
.baye_stress_test/: chroma.sqlite3
.baye_test_data/: chroma.sqlite3
cogito/: BELIEF_TRAINING_SPEC_V2.md  COMPARATIVE_ANALYSIS.md  INDEX.md  ONE_PAGE_SUMMARY.md  PRACTICAL_EXAMPLES.md  README.md  START_HERE.md  VISUAL_FLOW.md  belief_training_prototype.py
docs/testing/: e2e_strategy.md  refactoring_plan.md
examples/: example_estimation_integrated.py  example_llm_integration.py  example_nested_learning.py  example_uou_chat.py
src/: __init__.py
temp/: PR_DESCRIPTION.md
tests/: test_estimation.py  test_facts.py  test_uou_retrieval.py
(+27 files in other folders)
