[project]
name = "baye"
version = "1.5.0"
description = "Neural-symbolic belief maintenance system with LLM-powered reasoning"
authors = [
    {name = "Franklin Baldo", email = "franklin@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "networkx>=3.0",
    "pydantic>=2.0",
    "pydantic-ai>=0.0.1",
    "google-genai>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/baye"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
